--- a/CStringDs/CStringDs.vcxproj
+++ b/CStringDs/CStringDs.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="CStringDs.h" />
     <ClInclude Include="CStringDsDoc.h" />
     <ClInclude Include="CStringDsView.h" />
+    <ClInclude Include="CStringLength.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="pch.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="CStringDs.cpp" />
     <ClCompile Include="CStringDsDoc.cpp" />
     <ClCompile Include="CStringDsView.cpp" />
+    <ClCompile Include="CStringLength.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
