--- a/CStringDs/CStringDs.vcxproj.filters
+++ b/CStringDs/CStringDs.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CSetTextDLG.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CStringLength.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CStringDs.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CSetTextDLG.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CStringLength.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
